# notebook-clone

./: .gitignore  README.md
ci/: github-actions-ci.yml
docs/: crdt-collaboration.md
server/: README.md  e2e_conn.db  e2e_sqlblock.db  pyproject.toml
server/app/: analysis.py  auth.py  charts.py  comments.py  config.py  kpi.py  main.py  models.py  ws.py
server/app/ai/: api.py  service.py
server/app/connectors/: __init__.py  api.py  registry.py
server/app/contents/: api.py  store.py
server/app/kernels/: api.py  manager.py  session.py  translate.py
server/tests/: conftest.py  test_ai.py  test_analysis.py  test_auth.py  test_charts.py  test_collab.py  test_comments.py  test_connectors.py  test_contents.py  test_kernel_session.py  test_kpi.py  test_translate.py  test_variables.py  test_widgets.py  test_ws.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/e2e/: run.mjs
web/src/: App.tsx  Notebook.tsx  main.tsx  styles.css
web/src/components/: AiAssist.tsx  AiChat.tsx  AuthGate.tsx  Cell.tsx  DataConnectors.tsx  Editor.tsx  NotebookBrowser.tsx  SidePanel.tsx  Toolbar.tsx  VariableExplorer.tsx
web/src/components/outputs/: index.tsx
web/src/lib/: ai.ts  ansi.ts  auth.ts  charts.ts  comments.ts  connectors.ts  document.ts  kpi.ts  markdown.ts  protocol.ts  reactive.ts  run.ts  store.ts  widgets.ts  ws.ts
