[project]
name = "notebook-clone-server"
version = "0.1.0"
description = "Notebook Clone — FastAPI + jupyter_client backend (Phase 1 vertical slice)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jupyter_client>=8.6",
    "ipykernel>=6.29",
    "nbformat>=5.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "matplotlib>=3.8",
    "anthropic>=0.40",
    "nbconvert>=7.17.1",
    "ipywidgets>=8.1",
    "pandas>=2.0",
    "sqlalchemy>=2.0",
    "pyarrow>=15.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
